ermファイル読み込み処理内のループ処理を最適化